fixed on button rating when hover, numbers are now visible when hovering on every button from 1-5

--- a/styles.css
+++ b/styles.css
@@ -114,8 +114,8 @@ button {
 }
 
 button:hover {
-    color: var(--orange);
-    background-color: var(--white);
+    color: var(--white);
+    background-color: var(--orange);
     transition: all ease-out 0.3s;
 }
 
